--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,8 @@
 GENERAL STYLING
 */
 body {
-  background-color: #f5f5f5!important;
-  color: #4e4e4e!important;
+  background-color: #f5f5f5 !important;
+  color: #4e4e4e !important;
 }
 
 h1,
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #303849;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -31,7 +31,7 @@ a:hover {
 }
 
 .color-a {
-  color: #0078ff;
+  color: #303849;
 }
 
 .color-d {
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #303849;
 }
 
 .overlay-mf {
@@ -152,7 +152,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #303849;
   margin: 0 auto;
 }
 
@@ -171,7 +171,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #303849;
   width: 100px;
   bottom: -12px;
 }
@@ -208,12 +208,12 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #303849;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #303849;
   color: #fff;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -238,7 +238,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #303849;
   margin-right: 10px;
 }
 
@@ -252,7 +252,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #303849;
   display: block;
 }
 
@@ -299,7 +299,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #303849;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -318,7 +318,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #0078ff;
+  background: #f5cf55;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -356,7 +356,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #303849;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -439,12 +439,12 @@ NAVBAR
   width: 35px;
 }
 
-.navbar-b.navbar-trans .show > .nav-link:before,
-.navbar-b.navbar-trans .active > .nav-link:before,
+.navbar-b.navbar-trans .show>.nav-link:before,
+.navbar-b.navbar-trans .active>.nav-link:before,
 .navbar-b.navbar-trans .nav-link.show:before,
 .navbar-b.navbar-trans .nav-link.active:before,
-.navbar-b.navbar-reduce .show > .nav-link:before,
-.navbar-b.navbar-reduce .active > .nav-link:before,
+.navbar-b.navbar-reduce .show>.nav-link:before,
+.navbar-b.navbar-reduce .active>.nav-link:before,
 .navbar-b.navbar-reduce .nav-link.show:before,
 .navbar-b.navbar-reduce .nav-link.active:before {
   width: 35px;
@@ -458,8 +458,8 @@ NAVBAR
   color: #fff;
 }
 
-.navbar-b.navbar-trans .show > .nav-link,
-.navbar-b.navbar-trans .active > .nav-link,
+.navbar-b.navbar-trans .show>.nav-link,
+.navbar-b.navbar-trans .active>.nav-link,
 .navbar-b.navbar-trans .nav-link.show,
 .navbar-b.navbar-trans .nav-link.active {
   color: #fff;
@@ -473,26 +473,26 @@ NAVBAR
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #0078ff;
+  color: #303849;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #0078ff;
+  background-color: #303849;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #0078ff;
+  color: #303849;
 }
 
-.navbar-b.navbar-reduce .show > .nav-link,
-.navbar-b.navbar-reduce .active > .nav-link,
+.navbar-b.navbar-reduce .show>.nav-link,
+.navbar-b.navbar-reduce .active>.nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #0078ff;
+  color: #303849;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #0078ff;
+  color: #303849;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -524,13 +524,13 @@ NAVBAR
 }
 
 .navbar-b .dropdown-menu .dropdown-item:hover {
-  background-color: #0078ff;
+  background-color: #303849;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #0078ff;
+  background-color: #f5cf55;
 }
 
 /* Hamburger Navbar */
@@ -644,7 +644,7 @@ INTRO
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #303849;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
@@ -689,7 +689,7 @@ ABOUT
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #0078ff;
+  background-color: #303849;
 }
 
 /*
@@ -727,17 +727,17 @@ PORTFOLIO
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #303849;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #303849;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #303849;
 }
 
 .work-content .w-like .num-like {
@@ -780,7 +780,7 @@ TESTIMONIALS
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #303849;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -821,8 +821,8 @@ CONTACT
 */
 
 #sendmessage {
-  color: #0078ff;
-  border: 1px solid #0078ff;
+  color: #303849;
+  border: 1px solid #303849;
   display: none;
   text-align: center;
   padding: 15px;
@@ -885,7 +885,7 @@ BUTTON
 }
 
 .button-a {
-  background-color: #0078ff;
+  background-color: #303849;
   color: #fff;
   border-color: #cde1f8;
 }
