add Virtual Coffee Chat to portfolio

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -480,7 +480,7 @@ NAVBAR
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #303849;
+  background-color: #f5cf55;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
