--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,10 @@ h6 {
   color: #1e1e1e;
 }
 
-a {
+/* a {
   color: #1e1e1e;
   transition: all 0.5s ease-in-out;
-}
+} */
 
 a:hover {
   color: #303849;
