--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,5 +1,6 @@
 .Project-work-box {
-    margin-bottom: 15rem;
+    margin-top: 5rem;
+    margin-bottom: 10rem;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     background-color: #fff;
@@ -34,14 +35,18 @@
     padding-top: 0;
 }
 
-/* .Project-work-content .Project-w-like a {
-    color: #303849;
-} */
-
 .Project-work-content .Project-w-like .Project-num-like {
     font-size: .7rem;
 }
 
 .Project-w-title {
     font-size: 1.2rem;
+}
+
+.Project-title {
+    font-size: 2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    text-align: center;
 }
