add images to picture quest project

--- a/src/style.css
+++ b/src/style.css
@@ -884,8 +884,8 @@ BUTTON
 }
 
 .button:hover {
-  background-color: #0062d3;
-  color: #fff;
+  background-color: #f5cf55;
+  color: #303849;
   transition: all 500ms ease;
 }
 
